# sparse-indexing-container

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  pyproject.toml
.github/workflows/: packaging.yml  python-ci.yml  rust-ci.yml
python/sparse_indexing_container/: __init__.py
python/sparse_indexing_container/tests/: test_all.py  test_coo.py
src/: container.rs  coo.rs  errors.rs  indexing.rs  lib.rs  slices.rs
