[package]
name = "sparse-indexing-container"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "sparse_indexing_container"
crate-type = ["cdylib"]

[dependencies]
ndarray = { version = "0.16.1", features = ["rayon"] }
num-complex = "0.4.6"
numpy = "0.26.0"
pyo3 = { version = "0.26.0", features = ["num-complex"] }
rayon = "1.11.0"
