[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "sparse-indexing-container"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["numpy>=2"]
dynamic = ["version"]

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
sparse-indexing-container = { path = ".", editable = true }


[tool.pixi.dependencies]
rust = ">=1.89.0"
maturin = ">=1.9.4"
numpy = ">=2.3"
sparse = ">=0.3.1,<0.4"
scipy = ">=1.16.1,<2"

[tool.pixi.feature.tests.dependencies]
pytest = "*"
pytest-xdist = "*"
pytest-cov = "*"

[tool.pixi.feature.tests.tasks]
tests = "pytest"

[tool.pixi.feature.ci-py313.dependencies]
python = "3.13.*"

[tool.pixi.feature.dev.dependencies]
ipython = "*"
black = "*"

[tool.pixi.environments]
default = { solve-group = "default" }
tests = { features = ["tests"], solve-group = "default" }
ci-py313 = ["tests", "ci-py313"]
dev = ["ci-py313", "dev"]

[tool.pixi.tasks]
rust-fmt = "cargo fmt"
rust-lint = "cargo clippy"
