[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "sparse-indexing-container"
license = "Apache-2.0"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["numpy>=2"]
dynamic = ["version"]

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "win-64"]

[tool.pixi.pypi-dependencies]
sparse-indexing-container = { path = ".", editable = true }

[tool.pixi.dependencies]
rust = ">=1.89.0"
maturin = ">=1.9.4"
numpy = ">=2.3"
sparse = ">=0.3.1,<0.4"
scipy = ">=1.16.1,<2"

[tool.pixi.feature.tests.dependencies]
pytest = "*"
pytest-xdist = "*"
pytest-cov = "*"

[tool.pixi.feature.tests.tasks]
tests = "pytest"

[tool.pixi.feature.ci-py313.dependencies]
python = "3.13.*"
uv = ">=0.8.15,<0.9"

[tool.pixi.feature.dev.dependencies]
python = "3.13.*"
ipython = "*"
black = "*"

[tool.pixi.feature.ci-py311.dependencies]
python = "3.11.*"
uv = ">=0.8.15,<0.9"

[tool.pixi.environments]
default = { solve-group = "default" }
tests = { features = ["tests"], solve-group = "default" }
ci-py311 = ["tests", "ci-py311"]
ci-py313 = ["tests", "ci-py313"]
dev = ["tests", "dev"]

[tool.pixi.tasks]
rust-fmt = "cargo fmt"
rust-lint = "cargo clippy"
